# fin_data_parser_kor

./: .env.example  .gitignore  config.py  pyproject.toml
.streamlit/: config.toml
app/: Home.py
app/components/: charts.py  column_specs.py  data_access.py  scorecard.py  styling.py
app/pages/: 1_Sector_Dashboard.py  2_Company_Detail.py  3_Screening_Runs.py  4_Company_Encyclopedia.py
calculations/: account_lookup.py  capital_structure.py  cashflow_quality.py  dilution.py  fallback.py  growth.py  margins.py  pipeline.py  scoring.py  statement_parser.py
dart_client/: cache.py  client.py  corp_code.py  endpoints.py  errors.py  rate_limiter.py  retry.py
db/: connection.py  models.py  repository.py
db/migrations/: env.py
db/migrations/versions/: 3dad52a76c82_add_shares_dilution_and_scorecard_.py  77c4e2fb8a63_add_margin_columns.py  88b9db5215d9_initial_schema.py
jobs/: refresh_universe.py  run_screen.py
krx/: sector_fetcher.py
systemd/: fin-data-parser-web.service
tests/: conftest.py  test_capital_structure.py  test_cashflow_quality.py  test_dilution.py  test_fallback.py  test_growth.py  test_margins.py  test_scoring.py  test_statement_parser.py
tests/fixtures/sample_dart_responses/samsung_electronics/: 2019_CFS.json  2020_CFS.json  2021_CFS.json  2022_CFS.json  2023_CFS.json
tests/fixtures/sample_dart_responses/shinla_gen/: 2023_CFS.json  2023_OFS.json
tests/fixtures/sample_dart_responses/sk_hynix/: 2023_CFS.json
universe/: mapping_builder.py  resolver.py
